--- a/area-list.html
+++ b/area-list.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/category-list.css">
         <link rel="stylesheet" href="css/area-list.css">
         <link rel="stylesheet" href="css/nav.css">
-        <title>Categories</title>
+        <title>Areas</title>
 </head>
 
 <body>
