clickable logo, no placeholder text

--- a/area-list.html
+++ b/area-list.html
@@ -16,7 +16,8 @@
         <header>
                 <div class="menu-container">
 
-                        <img src="img/logo.svg" alt="logo" class="logo">
+                        <a href="index.html" alt="Home button"><img src="img/logo.svg" alt="logo" class="logo"></a>
+
 
                         <nav class="menu">
                                 <a class="menulink" href="index.html">Home</a></button>
