--- a/category-article.html
+++ b/category-article.html
@@ -15,7 +15,7 @@
   <header>
     <div class="menu-container">
 
-      <img src="img/logo.svg" alt="logo" class="logo">
+      <a href="index.html" alt="Home button"><img src="img/logo.svg" alt="logo" class="logo"></a>
 
       <nav class="menu">
         <a class="menulink" href="index.html">Home</a></button>
@@ -35,7 +35,7 @@
     </div>
     <div class="header-img"></div>
     <div class="article-container">
-      <h1 class="article-headline" id="category-article">ARTICLE- COPENHAGEN</h1>
+      <h1 class="article-headline" id="category-article">...</h1>
     </div>
   </header>
   <article>
@@ -44,19 +44,15 @@
   </article>
   <template>
     <section class="card">
-      <div class="card-img-cont"><img src="img/ava-coploff-tcE9zSc2SU8-unsplash.jpg" alt="Copenhagen" /></div>
+      <div class="card-img-cont"><img src="" alt="Copenhagen" /></div>
 
       <div class="text-column">
-        <h2>Location's name</h2>
-        <p class="address">Address</p>
+        <h2></h2>
+        <p class="address"></p>
         <div class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
         </div>
         <a href="#" class="typography-sample category">
-          <p>Category</p>
+          <p></p>
         </a>
       </div>
     </section>
