--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <header>
         <div class="menu-container">
 
-            <img src="img/logo.svg" alt="logo" class="logo">
+            <a href="#" alt="Home button"><img src="img/logo.svg" alt="logo" class="logo"></a>
+
 
             <nav class="menu">
                 <a class="menulink" href="index.html">Home</a></button>
