--- a/index.html
+++ b/index.html
@@ -47,70 +47,70 @@
                 </div>
             </div>
             <section class="cards-grid hidden slider" id="lnd-cat">
-                <a href="article.html?q={&quot;Category&quot;: &quot;Must-see places&quot;}" class="article-card">
+                <a href="category-article.html?q=Must-see places" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/mustsee.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Must-see places</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Instagrammable spots&quot;}" class="article-card">
+                <a href="category-article.html?q=Instagrammable spots" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/insta.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Instagrammable spots</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Historial sights&quot;}" class="article-card">
+                <a href="category-article.html?q=Historial sights" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/history.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Historical sites</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Architecture objects&quot;}" class="article-card">
+                <a href="category-article.html?q=Architecture objects" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/architecture.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Architecture objects</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Museums&quot;}" class="article-card">
+                <a href="category-article.html?q=Museums" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/museum.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Museums</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Parks and nature&quot;}" class="article-card">
+                <a href="category-article.html?q=Parks and nature" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/parks.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Parks and nature</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Entertainment&quot;}" class="article-card">
+                <a href="category-article.html?q=Entertainment" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/entertainment.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Entertainment</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Coffee shops&quot;}" class="article-card">
+                <a href="category-article.html?q=Coffee shops" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/coffee.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Coffee shops</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Bars and nightlife&quot;}" class="article-card">
+                <a href="category-article.html?q=Bars and nightlife" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/bars.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Bars and nightlife</h2>
                     </article>
                 </a>
 
-                <a href="article.html?q={&quot;Category&quot;: &quot;Outdoor activities&quot;}" class="article-card">
+                <a href="category-article.html?q=Outdoor activities" class="article-card">
                     <article class="ldn-card-cont">
                         <div class="cat-img-cont"><img src="img/outdoor.svg" alt="" class="categoryimage"></div>
                         <h2 class="categoryname">Outdoor activities</h2>
